Prevent "center jumps" when save dialog displayed
Since save dialog is a dialog, it is opened in modal popup, inside an overlay
that is not heigher than the page, so no scrollbar. If page content is long
and scrollbar is showing, it will disappear when opening the dialog, causing
jumps

This is a hacky solution, but best we can do

[3.1]

ERM: #16049

--- a/resources/bluespice.visualEditorConnector.css
+++ b/resources/bluespice.visualEditorConnector.css
@@ -147,3 +147,14 @@
 .bs-vec-unit-selectable .oo-ui-numberInputWidget {
 	width: 120px;
 }
+
+/* Must use !important because margins are set dynamically
+at unknown times */
+.bs-vec-always-show-scroll {
+	overflow-y: scroll;
+	margin-right: 0 !important;
+}
+
+.bs-vec-always-show-scroll body {
+	margin-right: 0 !important;
+}
